--- a/hotel/accounts/templates/accounts/signup.html
+++ b/hotel/accounts/templates/accounts/signup.html
@@ -13,6 +13,7 @@
 <form method="post">
     {% csrf_token %}
     {{form.as_p}}
+    {{profile_form.as_p}}
     <input type="submit" value="Sign Up">
 </form>
 
