--- a/hotel/users/templates/users/home.html
+++ b/hotel/users/templates/users/home.html
@@ -13,5 +13,7 @@
 
 {% if user.is_authenticated %}
     <h1>{{user.email}}</h1>
+    <h2>{{user.username}}</h2>
+    <h3>{{user.profile.phone_number}}</h3>
 {% endif %}
 {% endblock %}
