added increment button and static files

--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -39,8 +39,9 @@
 
 
     {% block script %}
-
     {% endblock %}
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="crossorigin="anonymous"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
 
