--- a/hotel/users/templates/users/home.html
+++ b/hotel/users/templates/users/home.html
@@ -19,26 +19,27 @@
     {{form.as_p}}
     {{formset.management_form}}
     <div id="form_set">
-        {% for f in formset %}
-            {{ f.as_p }}
-        {% endfor %}
+
+    </div>
+
+    <div id="room">
+        <input id='room-1-adults' name='room-1-adults' type="number" value="1">
+        <input id='room-1-children' name='room-1-children' type="number" value="0">
+        <label for="increment-1-adults">Adults</label>
+        <button class="increment" id="increment-1-adults" type="button">+</button>
+        <label for="increment-1-children">Children</label>
+        <button class="increment" id="increment-1-children" type="button">+</button>
     </div>
 
     <input type="button" value="Add More" id="add_more">
 
-    <div id="empty_form" style="display:none">
-            {{ formset.empty_form.as_p }}
-    </div>
 <button class='btn btn-success' type="submit">Save</button>
 </form>
 
-<script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="crossorigin="anonymous"></script>
-<script type="text/javascript">
-    $('#add_more').click(function() {
-    var form_idx = $('#id_form-TOTAL_FORMS').val();
-    $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
-    $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);});
-</script>
 {% endblock %}
 
 
+$('#add_more').click(function() {
+    var form_idx = $('#id_form-TOTAL_FORMS').val();
+    $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+    $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);});
