--- a/hotel/users/templates/users/rooms.html
+++ b/hotel/users/templates/users/rooms.html
@@ -10,9 +10,24 @@
 
 {% block content %}
 <h1>rooms</h1>
+<h2>{{check_in_date}} {{check_out_date}}</h2>
 
-{% for room in rooms %}
-    {{room}}
-{% endfor %}
-    
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+<div>
+    <ul>
+        {% for obj in rooms %}
+            {% for room in obj %}
+                <img class="room-image" src="{% static 'images/' %}{{room.room_type.image}}" alt="room">
+                <li>{{room}}</li>
+            {% endfor %}
+        <hr>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
