--- a/hotel/users/templates/users/home.html
+++ b/hotel/users/templates/users/home.html
@@ -37,7 +37,7 @@
 
                 <div class="room-summary flex">
                     <button type='button' class="guests flex flex-center">
-                        1 Room 1 Guest
+                        <span id="room-counter">1 Room</span><span id="guests-counter">1 Guest</span> 
                     </button>
                     <div class="room-container flex space-between">
                         <input type="hidden" name="" id="">
@@ -46,7 +46,7 @@
 
                         </div>
                         <div class="add-container">
-                            <button class="increment" type="button" id="add-more">+</button>Add Room
+                            <button class="increment-rooms" type="button" id="add-more">+</button>Add Room
                         </div> 
                     </div>
                     <button class='btn' type="submit">Find a booking</button>
