--- a/hotel/users/templates/users/rooms.html
+++ b/hotel/users/templates/users/rooms.html
@@ -9,6 +9,10 @@
 {% endblock %}
 
 {% block content %}
+
+{% include 'partials/navbar.html' %}
+
+
 <h1>rooms</h1>
 <h2>{{check_in_date}} {{check_out_date}}</h2>
 
