--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    {% include 'partials/navbar.html' %}
+    
     {% block content %}
 
 
@@ -33,8 +33,9 @@
     {% block script %}
     {% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="{% static 'js/popUps.js' %}"></script>
     <script src="{% static 'js/main.js' %}" type="module"></script>
-    <script src="{% static 'js/formValidation.js' %}" ></script>
+    <script src="{% static 'js/formValidation.js' %}" type="module"></script>
 </body>
 </html>
 
