--- a/hotel/static/css/home.css
+++ b/hotel/static/css/home.css
@@ -70,6 +70,7 @@ form {
     position: relative;
     justify-content: space-evenly;
     align-items: center;
+    margin-right: 30px;
     width: 300px;
 }
 
@@ -228,3 +229,7 @@ footer {
 
 
 
+#date-overlay {
+    position: absolute;
+    inset: 0;
+}
